working on fixing dark mode styles more

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@ document,
 }
 
 .link {
-  @apply hover:text-blue-600 text-blue-500 cursor-pointer hover:underline;
+  @apply hover:text-blue-600 text-blue-500 dark:text-blue-400 cursor-pointer hover:underline;
 }
 
 input,
